--- a/final project 3/index.html
+++ b/final project 3/index.html
@@ -481,84 +481,82 @@
       <div class="grid1 col-1-1">
         <!-- Task -->
         <section class="task box">
-            <div class="task-head">
-              <div class="task_heading">
-                <p class="title">Tasks</p>
-              </div>
-              <div class="task_heading_tools">
-                <ul class="navigation">
-                  <li class="nav_item"> <a href="#"><button>Today</button></a> </li>
-                  <li class="nav_item"> <a href="#"> Week </a> </li>
-                  <li class="nav_item"> <a href="#"> Month </a> </li>
-                </ul>
-              </div>
+          <div class="task-head">
+            <div class="task_heading">
+              <p class="title">Tasks</p>
+              <ul class="navigation_task">
+                <li class="nav_item"> <a href="#"><button>Today</button></a> </li>
+                <li class="nav_item"> <a href="#"> Week </a> </li>
+                <li class="nav_item"> <a href="#"> Month </a> </li>
+              </ul>
+            </div> <hr>
+          </div>
+          <div class="task_items">
+            <span class="timeA"><label class="container">
+            <input type="checkbox">
+            <span class="checkmark"></span>
+            </label>
+            </span>
+            <div class="author__info"><span>
+              <p class="detail">Lorem ipsum dolor sit amit,consectetur eiusmd </p>
+              <span class="author"><a href="#" class="author__name">By Bob</a></span>
             </div>
-            <div class="list_items">
-              <span class="time-task"><label class="container">
-              <input type="checkbox" checked="checked">
-              <span class="checkmark"></span>
-              </label>
-              </span>
-              <div class="author__info"><span>
-                <p class="detail">Lorem ipsum dolor sit amit,consectetur eiusmdd tempor </p>
-                <span class="author"><a href="#" class="author__name">By Bob</a></span>
-              </div>
-              </span>
-               <span class="time"><label class="container">
-              <input type="checkbox" checked="checked">
-              <span class="checkmark"></span>
-              </label>
-              </span>
-              <div class="author__info">
-                <p class="detail">Lorem ipsum dolor sit amit </p>
-                <span class="author"><a href="#" class="author__name">By Sean</a></span>
-              </div>
-              <span class="time"><label class="container">
-              <input type="checkbox" checked="checked">
-              <span class="checkmark"></span>
-              </label>
-              </span>
-              <div class="author__info">
-                <p class="detail">Lorem ipsum dolor sit amit eiusmdd tempor  </p>
-                <span class="author"><a href="#" class="author__name">By James</a></span>
-              </div>
-              <span class="time"><label class="container">
-              <input type="checkbox" checked="checked">
-              <span class="checkmark"></span>
-              </label>
-              </span>
-              <div class="author__info">
-                <p class="detail">Lorem ipsum dolor </p>
-                <span class="author"><a href="#" class="author__name">By James</a></span>
-              </div>
-               <span class="time"><label class="container">
-              <input type="checkbox" checked="checked">
-              <span class="checkmark"></span>
-              </label>
-              </span>
-              <div class="author__info">
-                <p class="detail">Lorem ipsum dolor sit amit,consectetur eiusmdd  </p>
-                <span class="author"><a href="#" class="author__name">By Derrick</a></span>
-              </div>
-               <span class="time"><label class="container">
-              <input type="checkbox" checked="checked">
-              <span class="checkmark"></span>
-              </label>
-              </span>
-              <div class="author__info">
-                <p class="detail">Lorem ipsum dolor sit amit,consectetur  </p>
-                <span class="author"><a href="#" class="author__name">By Iman</a></span>
-              </div>
-              <span class="time"><label class="container">
-              <input type="checkbox" checked="checked">
-              <span class="checkmark"></span>
-              </label>
-              </span>
-              <div class="author__info">
-                <p class="detail">Lorem ipsum dolor sit consectetur eiusmdd tempor  </p>
-                <span class="author"><a href="#" class="author__name">By Aziko</a></span>
-              </div>
+            </span>
+            <span class="timeA"><label class="container">
+            <input type="checkbox">
+            <span class="checkmark"></span>
+            </label>
+            </span>
+            <div class="author__info">
+              <p class="detail">Lorem ipsum dolor sit amit </p>
+              <span class="author"><a href="#" class="author__name">By Sean</a></span>
             </div>
+            <span class="timeA time11"><label class="container">
+            <input type="checkbox">
+            <span class="checkmark"></span>
+            </label>
+            </span>
+            <div class="author__info">
+              <p class="detail">Lorem ipsum dolor sit amit eiusmdd tempor  </p>
+              <span class="author"><a href="#" class="author__name">By James</a></span>
+            </div>
+            <span class="timeA time22"><label class="container">
+            <input type="checkbox">
+            <span class="checkmark"></span>
+            </label>
+            </span>
+            <div class="author__info">
+              <p class="detail">Lorem ipsum dolor </p>
+              <span class="author"><a href="#" class="author__name">By James</a></span>
+            </div>
+            <span class="timeA time33"><label class="container">
+            <input type="checkbox">
+            <span class="checkmark"></span>
+            </label>
+            </span>
+            <div class="author__info">
+              <p class="detail">Lorem ipsum dolor sit amit,consectetur eiusmdd  </p>
+              <span class="author"><a href="#" class="author__name">By Derrick</a></span>
+            </div>
+            <span class="timeA time44"><label class="container">
+            <input type="checkbox">
+            <span class="checkmark"></span>
+            </label>
+            </span>
+            <div class="author__info">
+              <p class="detail">Lorem ipsum dolor sit amit,consectetur  </p>
+              <span class="author"><a href="#" class="author__name">By Iman</a></span>
+            </div>
+            <span class="timeA time55"><label class="container">
+            <input type="checkbox">
+            <span class="checkmark"></span>
+            </label>
+            </span>
+            <div class="author__info">
+              <p class="detail">Lorem ipsum dolor sit consectetur eiusmdd tempor  </p>
+              <span class="author"><a href="#" class="author__name">By Aziko</a></span>
+            </div>
+          </div>
         </section>
         <!-- Support Tickets-->
         <section class="box">
@@ -603,10 +601,28 @@
       </div>
     </section>
     
-     <!-- recent notifacation -->
+     <!--  -->
     <section class="container">
       <section class="grid1 col-1-1">
-        <section class="recent-notifacation">
+        <!-- Recent Activities-->
+        <section class="box">
+          <div class="recent_activities_header">
+            <span class="recent_activities_title">Recent Activities</span>
+            <nav class="recent_activities_nav">...</nav>
+          </div>
+          <div class="recent_activities_info">
+            <div class="recent_act_info_list">
+              
+            </div>
+            <div class="recent_act_info_list"></div>
+            <div class="recent_act_info_list"></div>
+            <div class="recent_act_info_list"></div>
+            <div class="recent_act_info_list"></div>
+          </div>
+        </section>
+
+        <!-- recent notifacation -->
+        <section class="recent-notifacation box">
             <span class="title">Recent Notifacation</span>
             <nav class="recent_heading_tools">
               <ul class="navigation">
@@ -706,85 +722,6 @@
           </div>   
         </div>  
       </section>
-    <!-- Task -->
-    <section class="task">
-      <div class="task-head">
-        <div class="task_heading">
-          <p class="title">Tasks</p>
-          <ul class="navigation_task">
-            <li class="nav_item"> <a href="#"><button>Today</button></a> </li>
-            <li class="nav_item"> <a href="#"> Week </a> </li>
-            <li class="nav_item"> <a href="#"> Month </a> </li>
-          </ul>
-        </div> <hr>
-      </div>
-      <div class="task_items">
-        <span class="timeA"><label class="container">
-        <input type="checkbox">
-        <span class="checkmark"></span>
-        </label>
-        </span>
-        <div class="author__info"><span>
-          <p class="detail">Lorem ipsum dolor sit amit,consectetur eiusmdd tempor </p>
-          <span class="author"><a href="#" class="author__name">By Bob</a></span>
-        </div>
-        </span>
-         <span class="timeA"><label class="container">
-        <input type="checkbox">
-        <span class="checkmark"></span>
-        </label>
-        </span>
-        <div class="author__info">
-          <p class="detail">Lorem ipsum dolor sit amit </p>
-          <span class="author"><a href="#" class="author__name">By Sean</a></span>
-        </div>
-        <span class="timeA time11"><label class="container">
-        <input type="checkbox">
-        <span class="checkmark"></span>
-        </label>
-        </span>
-        <div class="author__info">
-          <p class="detail">Lorem ipsum dolor sit amit eiusmdd tempor  </p>
-          <span class="author"><a href="#" class="author__name">By James</a></span>
-        </div>
-        <span class="timeA time22"><label class="container">
-        <input type="checkbox">
-        <span class="checkmark"></span>
-        </label>
-        </span>
-        <div class="author__info">
-          <p class="detail">Lorem ipsum dolor </p>
-          <span class="author"><a href="#" class="author__name">By James</a></span>
-        </div>
-         <span class="timeA time33"><label class="container">
-        <input type="checkbox">
-        <span class="checkmark"></span>
-        </label>
-        </span>
-        <div class="author__info">
-          <p class="detail">Lorem ipsum dolor sit amit,consectetur eiusmdd  </p>
-          <span class="author"><a href="#" class="author__name">By Derrick</a></span>
-        </div>
-         <span class="timeA time44"><label class="container">
-        <input type="checkbox">
-        <span class="checkmark"></span>
-        </label>
-        </span>
-        <div class="author__info">
-          <p class="detail">Lorem ipsum dolor sit amit,consectetur  </p>
-          <span class="author"><a href="#" class="author__name">By Iman</a></span>
-        </div>
-        <span class="timeA time55"><label class="container">
-        <input type="checkbox">
-        <span class="checkmark"></span>
-        </label>
-        </span>
-        <div class="author__info">
-          <p class="detail">Lorem ipsum dolor sit consectetur eiusmdd tempor  </p>
-          <span class="author"><a href="#" class="author__name">By Aziko</a></span>
-        </div>
-      </div>
-    </section>
   </main>
   <script src="assets/main.js"></script>
 </body>
